ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Simple EC2 Instance

Mappings:
  AWSRegionToAMI:
    ap-south-1:
      "64": ami-0b32d400456908bf9

Resources:
  MyVPC: 
    Type: AWS::EC2::VPC 
    Properties: 
      CidrBlock: 10.0.0.0/24
      EnableDnsSupport: false 
      EnableDnsHostnames: false 
      InstanceTenancy: default
  InternetGateway: 
    Type: AWS::EC2::InternetGateway 
    Properties: 
      Tags: 
      - Key: Application
        Value: 
          Ref: AWS::StackName 
      - Key: Network 
        Value: Public 
  GatewayToInternet:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: MyVPC
      InternetGatewayId:
        Ref: InternetGateway
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: MyVPC
  SubnetRouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssoc
    Properties:
      RouteTableId:
        Ref: RouteTable
      SubnetId:
        Ref: Subnet  
  InternetGatewayRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId:
        Ref: RouteTable
      GatewayId:
        Ref: InternetGateway
  MySubnet: 
    Type: AWS::EC2::Subnet 
    Properties: 
      CidrBlock: 10.0.0.34/27
      AvailabilityZone: ap-south-1a
      VpcId: 
        Ref: MyVPC
      Tags: 
      - Key: Application 
        Value: 
          Ref: AWS::StackId 
  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: 
        Fn::FindInMap: 
          - AWSRegionToAMI 
          - Ref: AWS::Region 
          - "64" 
      InstanceType: t2.micro
      KeyName: mymumbai-key
      AvailabilityZone: ap-south-1a
      SubnetId: 
        Ref: MySubnet
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref MyVPC
      
    SecurityGroupIngress: 
    - IpProtocol: tcp 
      FromPort: 22 
      ToPort: 22 
      CidrIp: 
        Ref: SSHLocation 
    - IpProtocol: tcp 
      FromPort: 80 
      ToPort: 80 
      CidrIp: 0.0.0.0/0 

Outputs:
  InstanceId:
    Description: Instance ID
    Value: !Ref MyInstance
